refactor filter end-point & add new end-point